registration 1 test done