@@ -26,9 +26,31 @@ android {
     }
     testOptions {
         unitTests.includeAndroidResources = true
-    }
 
-}
+
+                unitTests {
+                    // By default, local unit tests throw an exception any time the code you are testing tries to access
+                    // Android platform APIs (unless you mock Android dependencies yourself or with a testing
+                    // framework like Mockito). However, you can enable the following property so that the test
+                    // returns either null or zero when accessing platform APIs, rather than throwing an exception.
+                    returnDefaultValues true
+
+                    // Encapsulates options for controlling how Gradle executes local unit tests. For a list
+                    // of all the options you can specify, read Gradle's reference documentation.
+                    all {
+                        // Sets JVM argument(s) for the test JVM(s).
+                        jvmArgs '-XX:MaxPermSize=256m'
+
+                        // You can also check the task name to apply options to only the tests you specify.
+                        if (it.name == 'testDebugUnitTest') {
+                            systemProperty 'debug', 'true'
+                        }
+
+                    }
+                }
+            }
+        }
+
 
 dependencies {
     def nav_version = '2.3.0-alpha06'
@@ -46,6 +68,8 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 
 
 
